2008-08-29  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-send-message-dialog.c:
	* src/twitux-spell-dialog.c:
	* src/twitux-add-dialog.c:
	* src/twitux-account-dialog.c:
	* src/twitux-preferences.c:
	* src/Makefile.am: Let's use twitux_xml_* functions.

	* src/twitux-xml.c:
	* src/twitux-xml.h: New files

2008-03-27  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-add-dialog.c (twitux_add_dialog_show): 
	* src/twitux-spell-dialog.c (twitux_spell_dialog_show): 
	* src/twitux-send-message-dialog.c (message_setup): 
	* src/twitux-preferences.c (twitux_preferences_dialog_show): 
	* src/twitux-account-dialog.c (twitux_account_dialog_show): 
	Add a little error checking in case the xml file can't
	be loaded.

2008-03-22  Brian Pepple  <bpepple@fedoraproject.org>
	
	* data/glade/account_dialog.glade:
	* data/glade/add_friend_dialog.glade:
	* data/glade/preferences_dialog.glade:
	* data/glade/send_message_dialog.glade:
	* data/glade/spell_dialog.glade: moved to glade directory,
	since we won't be including these in the tarball.

	* data/account_dlg.xml:
	* data/add_friend_dlg.xml:
	* data/spell_dlg.xml:
	* data/prefs-dlg.xml:
	* data/send_message_dlg.xml: New files.

	* data/Makefile.am:
	* po/POTFILES.in:
	* src/twitux-add-dialog.c:
	* src/twitux-account-dialog.c:
	* src/twitux-preferences.c:
	* src/twitux-send-message-dialog.c:
	* src/twitux-spell-dialog.c: start porting to gktbuilder
	from libglade.

2008-03-13  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in: have gettext translations match tarball name.

2007-03-10  Daniel Morales  <daniminas@gmail.com>

        * Release 0.61.

2008-03-03  Daniel Morales <daniminas@gmail.com>

	* src/twitux-tweet-list.c: Better text wrapping on tweets column.

2008-02-19  Daniel Morales <daniminas@gmail.com>

	* src/twitux-main.c: Bugfix #1897030. Thread system not initialized!

2008-02-14  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in: