@@ -1,0 +1,43 @@
+<?xml version="1.0" ?>
+<!--*- mode: xml -*-->
+<interface>
+
+<object class="GtkUIManager" id="uimanager1">
+  <child>
+    <object class="GtkActionGroup" id="actiongroup1">
+      <child>
+        <object class="GtkToggleAction" id="tray_show_app">
+          <property name="name">tray_show_app</property>
+          <property name="label" translatable="yes">_Show Twitux</property>
+        </object>
+      </child>
+      <child>
+        <object class="GtkAction" id="tray_new_message">
+          <property name="name">tray_new_message</property>
+          <property name="label" translatable="yes">_New Message</property>
+        </object>
+      </child>
+      <child>
+        <object class="GtkAction" id="tray_quit">
+          <property name="stock_id">gtk-quit</property>
+          <property name="name">tray_quit</property>
+        </object>
+      </child>
+    </object>
+  </child>
+  <ui>
+    <popup name="tray_menu">
+      <menuitem action="tray_show_app"/>
+      <separator/>
+      <menuitem action="tray_new_message"/>
+      <menuitem action="tray_quit"/>
+    </popup>
+  </ui>
+</object>
+
+<object class="GtkMenu" constructor="uimanager1" id="tray_menu">
+
+</object>
+
+</interface>
+
